# lambda-rust

./: .env.sample  .gitignore  Cargo.toml  README.md
src/: main.rs  models.rs
