[package]
name = "lambda_rust"
version = "0.1.0"
authors = ["Petar Petrov <ipetrovbg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.4.1"
serde = "1.0.130"
serde_json = "1.0.69"
aws-config = "0.0.24-alpha"
aws-sdk-sns = "0.0.24-alpha"
tokio = { version = "1", features = ["full"] }
